--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -123,7 +123,7 @@ body {
                                                   </form>
                                             
                                                 <p class="mt-3 text-center">
-                                                    Already have an account? <a href="/login" class="text-decoration-none">Login here</a>
+                                                    Already have an account? <a href="/login" class="btn btn-lg bg-gradient-primary btn-lg w-100 mt-4 mb-0">Login here</a>
                                                 </p>
                                             </div>
                                         </div>
